同步于: 11月2日10时2分

--- a/pages/p2/951164.md
+++ b/pages/p2/951164.md
@@ -1,4 +1,4 @@
-### 神明为什么会对某人特别严厉呢？(组图)
+### 蒋超良五中亮相 王岐山站稳了脚跟？(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img alt="" src="https://img2.secretchina.com/pic/2018/5-1/p2156761a228076124-ss.jpg" style="height:335px; width:600px"/>
+ <p style="text-align: center;">
+  <img alt="湖北前书记蒋超良（右）与陆军司令员韩卫国（中）、农业部长韩长赋（左）并排而座。" src="https://img3.secretchina.com/pic/2020/11-2/p2809121a267079964-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   神总适时提醒人们说：“作为一个修行人，凡事应先修正自已！怎能向外求，盯着别人的错误呢？”（绘图：志清/看中国）
+   湖北前书记蒋超良（右）与陆军司令员韩卫国（中）、农业部长韩长赋（左）并排而座。（图片来源：视频截图）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,28 +29,55 @@
   </div>
  </div>
  <p>
-  从前有位修行人，心地善良纯净。他在森林里结舍，每天在大树下诵经读法、持咒守戒、打坐入定。
+  【看中国2020年11月2日讯】（看中国记者林中宇综合报导）
+  <strong>
+   武汉肺炎
+  </strong>
+  疫情在中国武汉爆发后，中共湖北省委原书记
+  <strong>
+   蒋超良
+  </strong>
+  以及武汉市委原书记马国强于2月双双被免职。蒋超良是中共十九届中央委员，马国强是中央候补委员，有境外媒体猜测
+  <strong>
+   五中全会
+  </strong>
+  可能处理两人，甚至逐出中央委员会。不过，五中全会未见披露人事变动，央视新闻联播画面显示，蒋超良以中央委员的身份参加会议。有评论认为，这显示蒋超良靠山
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/王岐山" target="_blank">
+    王岐山
+   </span>
+  </strong>
+  站稳了脚跟。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  <strong>
-   修行人手摘香莲　惹怒莲花池神
-  </strong>
+  央视新闻联播画面所见，
+  <span href="https://zh.wikipedia.org/wiki/%E8%92%8B%E8%B6%85%E8%89%AF" target="_blank">
+   蒋超良
+  </span>
+  与陆军司令员韩卫国、农业部长韩长赋坐在一起，参加五中全会。今年2月，蒋超良被免去湖北省委书记，由原上海市长应勇接替，他没有参加交接仪式。
  </p>
  <p>
-  一天他打完坐，起身信步走走。一抬头，看到眼前出现了一个莲花池，满池盛开的莲花，迎风摇曳，十分美丽。他心中欢喜，生起一个念头：这么美丽的莲花，摘一朵带回精舍，敬放在佛像前，禅坐时闻着沁人心脾的芬芳，多好啊！
+  去年底从武汉开始爆发的武汉肺炎，因为中共上下隐瞒而扩散全世界。有大外宣媒体随后引述
+  <span href="https://www.secretchina.com/news/gb/tag/习近平" target="_blank">
+   习近平
+  </span>
+  2月23日的内部讲话间接透露，蒋超良是因疫情防控不力背锅。
  </p>
  <p>
-  于是，他弯身在池边挑选了一朵莲花，摘下来。他满心欢喜地将莲花双手捧在胸前，正要离开，耳边突然传来一个巨大而又严厉的声音：“你怎敢随意偷采我的莲花？”
+  <span href="https://www.secretchina.com/news/gb/tag/蒋超良" target="_blank">
+   蒋超良
+  </span>
+  生于1957年8月，曾长期在中国国有金融机构任职，先后担任交通银行董事长、国家开发银行行长、中国农业银行董事长等职；2014年8月底，调任吉林省出任副书记，同年10月，出任吉林省省长；2016年10月，蒋超良担任湖北省省委书记。2020年2月13日被免职湖北省委书记。
  </p>
  <p>
-  他环顾四周，什么也看不到，他对着虚空发问：“你是谁？为何说这莲花是你的？”
+  蒋超良令人关注的是与现任国家副主席王岐山的关系。1997年亚洲金融危机爆发，广东曾设“广东省地方中小金融机构和农金会金融风险处置工作协调小组”，组长是常务副省长王岐山，蒋任副组长。
  </p>
  <p>
-  虚空中的声音平静威严：“我是此处的莲花池神，池中所有莲花都因我的呵护而盛开。你是修行人，心起贪念，你却不知约束，任贪念主宰你，偷采我的莲花，现在还不知反省，是何道理！？”
+  与蒋超良同天被免的还有武汉市委书记马国强。蒋超良是中共中央委员身分，马国强则是中共中央候补委员。蒋超良虽然露面，暂时仍没有其复出的消息。2003萨斯（非典）爆发，前北京市长孟学农免职，大约半年后担任国务院南水北调工程建设委员会办公室副主任。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -65,7 +92,11 @@
   </div>
  </center>
  <p>
-  修行人顿感惭愧，于是他朝着虚空顶礼：“尊敬的莲花池神！我知道错了，从今以后绝不会贪取任何不属于自己的东西。”
+  10月26日
+  <span href="https://www.secretchina.com/news/gb/tag/五中全会" target="_blank">
+   五中全会
+  </span>
+  召开后，新加坡《联合早报》10月27日曾报导称，中共湖北省委原书记蒋超良、武汉市委原书记马国强是否会留任中央委员会，在五中全会后将更明朗。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -80,7 +111,7 @@
   </div>
  </center>
  <p>
-  这时，另一个陌生人走近了莲花池边，只见那人低头自语：“哇！这么好的莲花啊！我何不摘了拿到集上，能卖很多钱呢！卖了钱我一定再上赌场，把昨天输的钱赢回来！”
+  中共十九届五中全会10月29日闭幕，毫无悬念地声称正式通过“十四五规划”及“2035年远景目标”，又提及“双循环”和再次确认习近平的党内核心地位。此前风传的人事变动、王岐山下台和接班人问题等均没有任何信息。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -95,7 +126,7 @@
   </div>
  </center>
  <p>
-  说罢，那人跳进莲花池，很快就把整池的莲花摘个精光，之后，他扬长而去。满池莲叶被他弄得狼藉一片，池底污泥泛起，美丽的荷花池变成了一潭浊水。
+  据“燕铭时评”分析，湖北省委书记蒋超良与湖北省委副书记、武汉市委书记马国强被免职后，去向成谜。但五中全会却又未被公开免去蒋超良与马国强的中央委员与候补中央委员职位，凸显政局诡异。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -110,25 +141,7 @@
   </div>
  </center>
  <p>
-  修行人看得目瞪口呆，心中充满疑惑，还有委屈与不满，他对着虚空说：“莲花池神呀！我只不过采了一朵莲花，你就那么严厉地斥责我。刚才那个人采光了你所有的莲花，将整个莲花池都践踏了，你却视而不见、一言不发，这公平吗？”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p style="text-align:center">
-  <img alt="" src="https://img2.secretchina.com/pic/2019/9-18/p2520571a584156675-ss.jpg"/>
-  <br>
-   莲花池神说道：“一块洁白的布匹，沾上一点脏污就非常显眼，但只要用力清洗，便会洁白如新；而一块黑抹布，长年浸渍在污水中，恐怕怎么洗也洗不干净了。”（摄影：李芳）
-  </br>
+  知名评论人士陈破空评论认为，五中全会看似波澜不惊，但会议后三天怀疑经历了一场暗斗，习与各派打成平手。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -143,7 +156,37 @@
   </div>
  </center>
  <p>
-  虚空中传来莲花池神慈悲的声音：“一块洁白的布匹，沾上一点脏污就非常显眼，但只要用力清洗，便会洁白如新；而一块黑抹布，长年浸渍在污水中，恐怕怎么洗也洗不干净了。”
+  陈破空说，最终十九届五中全会有没有任何人事变动，要看接下来要开的中纪委五中全会，会不会处理之前被免的湖北前高官蒋超良和马国强。两人一个是中央委员、一个是中央候补委员，如果中纪委五中全会没有宣布，间接说明前国家副主席王岐山站稳了脚跟，他的亲信蒋超良依然在中央当中。没有被赶尽杀绝，仍然有投票权。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  另外，陈破空还说，五中全会前有放风说习要重设党主席，但事实上没有，显示习阵营受挫。另外有传说五中全会要王岐山下台，特别是副部级的王岐山旧部董宏落马引发种种猜测，但是这次会议显示王岐山平安无事，在会前还高调在上海露面，而且还公开痛批“歪路邪路”，以致王沪宁控制的新华社、人民日报又不登，这也说明王歧山站稳了脚跟。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  不过，目前仅见蒋超良，未见有媒体披露马国强亮相五中全会的镜头。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -162,7 +205,7 @@
   </ins>
  </center>
  <p>
-  “你是个修行人，如同那块洁白的布匹，我呵斥你是为了提醒，让你及时意识到自己的污点，去掉它，你应为此感到高兴才是。而那赌徒，已沉沦太久，难有改过之念，自会坠入报应之道，我又何必呵斥他呢！”
+  据官方报导，出席五中全会的有198个中央委员，166个候补中央委员。会议通报中未披露中央委员与候补中央委员变动情况。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -177,7 +220,7 @@
   </div>
  </center>
  <p>
-  神继续启悟说：“作为一个修行人，凡事应先修正自已！怎能向外求，盯着别人的错误呢？”
+  现任第十九届中央委员会委员204名，候补中央委员168人。这意味着，6名中央委员与2名候补中央委员缺席五中全会。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -192,7 +235,7 @@
   </div>
  </center>
  <p>
-  这时修行人才悟到，刚才自己岂不是盯着别人的过错不放吗？难怪打坐常陷入昏沉啊。一味诵经持咒，不等于修行，遇事不责己过，反迁怒他人，又如何能获得解脱呢！
+  亲共港媒《星岛日报》10月31日报导称，缺席五中全会的六名中央委员分别为新疆自治区党委书记陈全国、西部战区司令员赵宗岐、新疆军区司令员刘万龙、湖北省长王晓东、应急管理部部长王玉普、全国人大常委冷溶。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -207,7 +250,22 @@
   </div>
  </center>
  <p>
-  参考资料：民间故事
+  但报导没提及缺席的候补中央委员名单。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  今年6月，法国的亚洲报道与评论网站Asialyst刊登了加拿大多伦多大学政治学博士佩耶特(Alex Payette）的文章分析指出，蒋超良与王岐山关系紧密而且还是一位金融干部，他或许可以因此而躲过一劫，而马国强同武钢与上海帮的关系或许将对他有害无益。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -271,13 +329,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/911140.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/911140.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/911140.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/27/911140.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/951164.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/951164.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/951164.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/02/951164.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p7/911140.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p2/951164.md' width='0px' height='0px'/>
