--- a/pages/prog202/a102978006.md
+++ b/pages/prog202/a102978006.md
@@ -1,4 +1,4 @@
-### 【环球直击】10月9日完整版（1）
+### 【环球直击】11月3日完整版（1）
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,34 +7,38 @@
 
 <div><div class="post_content" itemprop="articleBody">
  <p>
-  【新唐人北京时间2020年10月09日讯】【环球直击】10月9日完整版（1）
+  【新唐人北京时间2020年11月03日讯】【环球直击】11月3日完整版（1）
  </p>
  <p>
   <strong>
    提要
+   <br/>
   </strong>
-  <br/>
-  再现杀人楼！广东一
-  <ok href="https://www.ntdtv.com/gb/楼盘坍塌.htm">
-   楼盘坍塌
+  <ok href="https://www.ntdtv.com/gb/蚂蚁集团.htm">
+   蚂蚁集团
   </ok>
-  9人死伤
-  <br/>
-  中港被爆设局掳12人送中 朱凯迪促
-  <ok href="https://www.ntdtv.com/gb/国际调查.htm">
-   国际调查
+  上市前
+  <ok href="https://www.ntdtv.com/gb/马云.htm">
+   马云
   </ok>
+  等三人被监管约谈
   <br/>
-  【独家报导】
-  <ok href="https://www.ntdtv.com/gb/朝鲜首爆氢弹.htm">
-   朝鲜首爆氢弹
+  <ok href="https://www.ntdtv.com/gb/华为.htm">
+   华为
   </ok>
-  中共内部报告曝光
+  公关副总裁乔·凯利 深圳猝死 年仅55岁
   <br/>
-  <ok href="https://www.ntdtv.com/gb/美国总统辩论.htm">
-   美国总统辩论
+  【选民心声】选民挺
+  <ok href="https://www.ntdtv.com/gb/川普.htm">
+   川普
   </ok>
-  第二场延至22日 第三场未定
+  ：要自由不要社会主义
+  <br/>
+  获奖纪录片《
+  <ok href="https://www.ntdtv.com/gb/寻找勇气.htm">
+   寻找勇气
+  </ok>
+  》 讲述坚持信仰之路
  </p>
  <div class="single_ad">
  </div>
@@ -42,13 +46,13 @@
 </div>
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102959500.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102959500.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102959500.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.ntdtv.com/gb/2020/10/09/a102959500.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102978006.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102978006.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102978006.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.ntdtv.com/gb/2020/11/03/a102978006.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/prog202/a102959500.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/prog202/a102978006.md' width='0px' height='0px'/>
