--- a/pages/nf4514/n12518740.md
+++ b/pages/nf4514/n12518740.md
@@ -7,7 +7,7 @@
 
 <div><img alt="【大选更新】两小镇先开票 川普领先6票" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/10/TrumpBiden-1200x720-600x400.jpg"/>
 <div class="caption">
- 图为2020年美国总统大选的两党候选人，左边为现任共和党总统川普、右边为前民主党副总统拜登。(Chris Graythen/Getty Images; Andrew Caballero-Reynolds/AFP via Getty Images)
+ 2020年美国总统大选的两党候选人，左边为现任共和党总统川普、右边为前民主党副总统拜登。(Chris Graythen/Getty Images; Andrew Caballero-Reynolds/AFP via Getty Images)
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
