--- a/pages/p5/951328.md
+++ b/pages/p5/951328.md
@@ -1,4 +1,4 @@
-### 黑恶势力有执法人员保护 打拐志愿者遭遇一系列报复(图)
+### 美国大选结果将揭晓 华尔街和北京心慌乱(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align: center;">
-  <img alt="为了找寻被拐卖的弟弟，四川居民吴丽平赫然发现参与贩卖人口的人贩团伙经常出入警方圈，执法人员也在保护着黑恶势力。" src="https://img3.secretchina.com/pic/2020/6-17/p2713452a96745099-ss.jpg"/>
+  <img alt="美国大选 华尔街 外汇" src="https://img3.secretchina.com/pic/2020/9-24/p2782195a999671898-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   为了找寻被拐卖的弟弟，四川居民吴丽平赫然发现参与贩卖人口的人贩团伙经常出入警方圈，执法人员也在保护着黑恶势力。（图片来源：GREG BAKER/AFP via Getty Images）
+   华尔街过度押注民主党候选人拜登获胜，给市场带来金融风险。（图片来源：Adobe Stock）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,111 +21,59 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.51.119:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.51.119:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/)  &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html) &nbsp;|&nbsp; [网门免翻墙](http://158.247.203.241:11000/show.aspx?name=ogHome)
-
-#### 💥 [九评共产党](http://141.164.51.119:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.51.119:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.51.119:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.51.119:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  内蒙局势升级 传大量装甲车现身街头](http://141.164.51.119:10000/videos/news/0903.html)
-
-#### [ 🔥  【陈光诚专访】 当年发生了什麽？为什麽要支持川普竞选总统？触目惊心的亲身经历告诉你背后的故事](http://141.164.51.119:10000/videos/news/cgc02.html)
-
-#### [ 🔥  《为你而来》（法轮功修炼者的故事）](http://141.164.51.119:10000/videos/news/ComingForYou.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年9月4日讯】（看中国记者卢乙欣综合报导）四川省古蔺县居民
+  【看中国2020年11月3日讯】（看中国记者文龙综合报导）
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/吴丽平" target="_blank">
-    吴丽平
+   <span href="https://www.secretchina.com/news/gb/tag/美国大选" target="_blank">
+    美国大选
    </span>
   </strong>
-  ，为找寻被拐卖的弟弟已长达27年。她在通过长时间收集大量资料后证实，参与
+  结果即将揭晓，此前
   <strong>
-   贩卖人口
+   华尔街
   </strong>
-  的
+  过度押注民主党候选人拜登获胜，从而给市场带来金融风险。如今华尔街正为短期震荡做准备，北京当局也心慌，国有银行称美国大选如引发市场波动加剧，将限制贵金属和
   <strong>
-   人贩
+   外汇
   </strong>
-  团伙经常出入警方圈。因此，她虽穷尽一切合法的举报管道，不只未促使警方将
-  <strong>
-   人口贩卖
-  </strong>
-  者绳之以法，反倒为她及家人招致一系列的报复迫害及整肃。至于根源正是因家乡存在一批掌握权力的执法人员在保护着黑恶势力。
+  交易。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  北晚新视觉今年7月1日报导，吴丽平为此还曾深入拐卖组织，也跑遍了大半个中国大陆，甚至帮警方锁定一名又一名嫌疑人，而她也因此成为了全国打拐群体中的公益志愿者。2017年，福建警方在运用全国联网DNA数据库时，从另一起儿童被拐案件中锁定了数名疑似被拐的人员。最终，吴丽平找回了弟弟，可是她却也迷惑了：虽然弟弟回来了，但拐卖的嫌疑人始终没有受到惩罚。
- </p>
- <p>
-  2018年11月，吴丽平自古蔺县公安局处得知，其中一名嫌疑人陈某遭到县公安局拘捕，并被移送至古蔺人民检察院提起公诉。不过，吴丽平才高兴不久，就获告知，由于“超过法律时效”，陈某已经获得释放了。
- </p>
- <p>
-  提及吴丽平不遗余力地寻找被拐卖的弟弟吴玉龙，旁人自当是了解她在这漫长27年的过程中耗费了极大苦心。
- </p>
- <p>
-  民生观察报导，这20几年来，吴丽平一边在全国各地打工谋生，一边利用机会找寻遭到拐卖的弟弟。吴丽平始终坚信弟弟是遭人拐卖的。
- </p>
- <p>
-  2010年仍身处外地的吴丽平，曾将收集到的资料寄给故乡的父母，并要求父母向古蔺县公安报案求助。可是，地方打拐办却只是收下了材料却不置可否。即使吴家多次重复同样的举动，古蔺公安仍是采用同样的态度，让此事“不了了之”。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  2012年1月，公安部发布公函下令四川省公安厅督办调查。从此以后，历经19年的吴玉龙被拐卖案终于正式立案，但此案似乎也引发古蔺县公安局打拐办主任徐发政的不悦。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  2012年，吴丽平将古蔺警方并不积极的认真调查、抓捕的内幕，透过网络公布于众，并引发古蔺警方的极度不满。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  2013年初，吴丽平、志愿者及媒体人，前往古蔺县请求抓捕
-  <span href="https://www.secretchina.com/news/gb/tag/人贩" target="_blank">
-   人贩
+  <span href="https://zh.wikipedia.org/wiki/2020%E5%B9%B4%E7%BE%8E%E5%9C%8B%E7%B8%BD%E7%B5%B1%E9%81%B8%E8%88%89" target="_blank">
+   美国大选
   </span>
-  子。不过，打拐办主任徐发政并没有提及打拐的正事，却亮出了吴丽平大弟弟吴渊的照片，好不得意地说：“你看你在安监局工作的弟弟，我们都查的很清楚啦。”吴丽平见状，不悦表示：“你不查人贩子，查我家人做什么？”
+  结果揭晓后，投资人可能因此面临美国在赋税、政府支出、贸易和金融监管方面有着截然不同的变化。景顺(Invesco)首席全球市场策略师Kristina Hooper表示，对股市来说，只要不出现有争议的结果，就都是好消息，要有决定性的胜出就更好了。
+ </p>
+ <p>
+  Hooper还表示，如果选举结果不明确，投资者可能涌向黄金与美债等避险资产，可能还包括日圆与美元。
+ </p>
+ <p>
+  过去的两个月期间，摩根大通创造的一篮子“拜登股”上涨4.5%，“川普股”则是下跌16%。现在分析师已指出金融风险，对
+  <span href="https://zh.wikipedia.org/wiki/%E5%8D%8E%E5%B0%94%E8%A1%97" target="_blank">
+   华尔街
+  </span>
+  过度相信拜登胜选感到忧心。
+ </p>
+ <p>
+  根据皮尤（Pew）研究中心的调查，有79%的美国登记选民说经济是他们的重中之重。两位候选人的经济政策确实有极大不同，甚至是完全对立的，那么大选的结果必将影响美国经济的未来，也会对世界经济产生深远影响。
+ </p>
+ <p>
+  可以肯定的是，自2016年
+  <span href="https://www.secretchina.com/news/gb/tag/川普" target="_blank">
+   川普
+  </span>
+  (特朗普)当选美国总统以来，美股上涨了约53%，并屡创新高，川普削减公司税的举措也支持了股市。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -140,7 +88,79 @@
   </div>
  </center>
  <p>
-  2013年7月，担任古蔺安监局招聘的临时工的吴渊，被以“受贿罪”立案逮捕，随后遭到古蔺县法院重判10年有期徒刑。
+  据《路透社》11月2日报道，Esplanade Capital投资长Shawn Kravetz说，他的对冲基金押注太阳能股，但也做好了“一些周到且有创意的对冲”，以免承受“过度的风险”。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  此前
+  <span href="https://www.secretchina.com/news/gb/tag/华尔街" target="_blank">
+   华尔街
+  </span>
+  的投资者积极押注将因拜登获胜而受益的资产，包括替代能源股和大麻股。但是，随着拜登家族“硬盘门”丑闻的发酵，越来越多证据和证人陆续涌现，拜登及其家族与中共的关系也愈发引人关注。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  ASIAM数据分析及策略总监李鸿彦在Facebook专页发表分析文章，指《纽约邮报》在10月15日报道拜登儿子亨特，与乌克兰天然气公司Burisma以及
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
+  </span>
+  华信能源公司的交易丑闻后，民众搜索亲共和党传媒的取态变化，可以见到民意的转变。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  随着拜登在民调中的领先优势缩小，一些市场观察人士担心，如果共和党总统川普获得连任，可能会因投资者押注拜登而迫使市场出现2016年那样的剧烈震荡，当时投资者同样过度押注希拉里·克林顿将赢得总统选举。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  而中国国有银行的应对措施也反映出北京当局同样心慌，中国银行和交通银行在11月2日都发布公告称，预计北京时间11月3日至11月4日贵金属、
+  <span href="https://zh.wikipedia.org/wiki/%E5%A4%96%E6%B1%87" target="_blank">
+   外汇
+  </span>
+  市场市场风险可能加剧。如果市场波动加剧，可能会限制贵金属和外汇产品的交易。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -159,7 +179,11 @@
   </ins>
  </center>
  <p>
-  2019年10月，长期没有待在家乡的吴丽平，接获家乡乡镇官员的威胁电话，对方告诉她：“房子（老宅子）属危房和超范围建筑，必须拆除！”官方此后还运用技侦手段进行定位，并警告她：“（我们）知道你在什么位置，你的心脏太小承不起！”
+  公告称，在美国大选期间，如流动性显著降低，可能适当下调账户贵金属、双向账户贵金属、积利金、
+  <span href="https://www.secretchina.com/news/gb/tag/外汇" target="_blank">
+   外汇
+  </span>
+  宝、双向外汇宝单笔成交金额上限。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -174,7 +198,7 @@
   </div>
  </center>
  <p>
-  2020年4月，吴丽平再次将《吴玉龙案人贩子团伙至今逍遥法外》发布于网络上。几日后，远在故乡的高龄母亲，慢行于人行道期间，遭到后方撞过来的汽车卷入了汽车底盘。交警部门在后续的处理过程中，隐瞒肇事车的单位、肇事过程的调查资料及事件处理结果。
+  中国银行公告称，11月3日至11月4日美国大选期间，预计贵金属、外汇市场波动性将急剧升高、流动性将显著降低，市场风险可能加剧；按照国际惯例，将对该行个人交易业务临时做出调整。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -189,7 +213,7 @@
   </div>
  </center>
  <p>
-  即使在吴丽平的强烈抗争要求下，警方迄今仍是对关键及原则性的内容不予对外告知。
+  中国银行公告显示，依据市场情况调整报价价差水平，届时账户贵金属、双向账户贵金属、积利金、外汇宝、双向外汇宝、个人期权各合约报价价差有可能显著高于正常水平。在美国大选期间，如流动性显著降低，可能适当下调账户贵金属、双向账户贵金属、积利金、外汇宝、双向外汇宝单笔成交金额上限；若出现流动性枯竭的极端情况，可能在短时间内暂停账户贵金属、双向账户贵金属、积利金、外汇宝、双向外汇宝、个人期权部分合约的报价。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -204,7 +228,7 @@
   </div>
  </center>
  <p>
-  遭遇困厄的吴丽平不畏惧一切，直至现今仍不断呼吁、奔走抗争，并将这些事情向居住在北京的主要领导及职能部门进行投诉、举报。
+  公告强调称，“请投资者做好委托管理，提高风险意识，合理控制仓位，谨慎操作，理性投资。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -236,7 +260,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -268,13 +292,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/945118.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/945118.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/945118.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/04/945118.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/951328.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/951328.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/951328.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/03/951328.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p1/945118.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p5/951328.md' width='0px' height='0px'/>
