--- a/pages/p5/951330.md
+++ b/pages/p5/951330.md
@@ -1,4 +1,4 @@
-### 美对中国公司行动或致国际银行减少对中企敞口
+### 英国11月5日再度实施封锁 经济恐将再探底
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,21 +7,21 @@
 
 <div class="article_right" style="fone-color:#000">
  <p>
-  【看中国2020年9月12日讯】
+  【看中国2020年11月3日讯】
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/银行" target="_blank">
-    银行
+   英国
+  </strong>
+  首相约翰逊10月31日宣布，鉴于愈加严峻的
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/武汉肺炎" target="_blank">
+    武汉肺炎
    </span>
   </strong>
-  业的消息人士称，美国近几周大力打压中国企业的行动引发国际银行纷纷减少对
+  疫情形势，计划从11月5日起在英格兰地区再次实施为期4周的大范围“禁足”措施。苏格兰、威尔士和北爱尔兰地区已从10月起执行更为严格的防疫规定。今年3月，英国曾实施全面“禁足”令。英国经济学家们担心，大范围封锁措施可能使英国
   <strong>
-   中企
+   经济
   </strong>
-  的
-  <strong>
-   敞口
-  </strong>
-  ，并试图确定还有哪些其它企业有可能成为华盛顿瞄准的目标。
+  经历“二次探底”，但造成的经济损失预计将小于第一次封锁。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
@@ -32,67 +32,42 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.51.119:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.51.119:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/)  &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html) &nbsp;|&nbsp; [网门免翻墙](http://158.247.203.241:11000/show.aspx?name=ogHome)
-
-#### 💥 [九评共产党](http://141.164.51.119:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.51.119:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.51.119:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.51.119:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  秦鹏快评：中共战狼大使涉黄被抓现行，遭国际嘲讽；官方辟谣恐惹无数麻烦，中共官员到底在想什么呢？](http://141.164.51.119:10000/videos/news/qp03.html)
-
-#### [ 🔥  前中共雞西市副市長李傳良公開對抗中共暴政聲明](http://141.164.51.119:10000/videos/news/../tui/index.html)
-
-#### [ 🔥  中共派系鬥爭是怎麼形成的｜「中共派系鬥爭」解讀](http://141.164.51.119:10000/videos/news/don02.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  中芯国际集成电路制造有限公司（SMIC）成为因美中关系紧张而受到影响的最新一家公司。美国国防部的一位官员上个星期表示，华盛顿可能将
-  <span href="https://www.secretchina.com" target="_blank">
-   中国
+  凯投国际宏观经济咨询公司经济学家保罗・戴尔斯预计，受封锁影响，今年第四季度
+  <span href="https://www.secretchina.com/news/gb/tag/英国" target="_blank">
+   英国
   </span>
-  这家最大的芯片制造商纳入出口管制清单。
+  经济可能出现零增长，甚至小幅萎缩。他说：“所有迹象都指向‘二次探底’。”投资银行高盛也预计，英国第四季度经济增速将从此前预计的上涨3.6%变为萎缩2.4%。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  这个消息传出后不久，一家与中芯国际有2亿多美元未偿还信贷的国际银行的银行家们聚在一起，讨论是否有办法让这家中国公司提前偿还部分贷款。
- </p>
- <p>
-  一位不愿意透露姓名的银行家对路透社说，就中芯国际的贷款进行的内部讨论还在进行之中，目前还没有就此得出结论。
- </p>
- <p>
-  中芯国际没有对有关的报道做出回应。
- </p>
- <p>
-  过去两年来，美中两国在贸易和中国电信巨头
-  <span href="https://www.secretchina.com/news/gb/tag/华为" target="_blank">
-   华为
+  英国智库牛津
+  <span href="https://www.secretchina.com/news/gb/tag/经济" target="_blank">
+   经济
   </span>
-  问题上出现的紧张已经引起了商界的担忧。过去几个月，随着香港《国家安全法》的出台，美国要求中国字节跳动剥离视频应用TikTok，现在又要对中芯国际采取行动，国际银行对其在华投资组合的焦虑进一步加剧。
+  研究院认为，鉴于新一轮封锁措施没有第一次严格，此次封锁对经济的损害将小于第一次。据悉，制造业和建筑业仍将保持运营，而学校继续开放将使家长能够正常工作。此外，许多行业目前仍以远低于疫情前的水平运行，较低的基数使经济大幅下降的空间变小。
  </p>
  <p>
-  上个月，华盛顿把24家中国企业和个人列入黑名单，称这些企业与个人参与了南中国海的建设和军事行动。这是美国首次就这一有争议的战略水域对北京实施此类制裁。
+  但英国商业团体代表认为，新一轮大范围封锁将使更多企业陷入困境。英国工业联合会负责人卡罗琳・费尔贝恩说：“第二次全面封锁标志着寒冬的开始。”
  </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
  <p>
-  金融界的人士说，随着美国大选的临近，对更多的中国公司采取行动的可能性只会进一步增加，因为特朗普总统把国家安全以及他对中国强硬作为他竞选的关键组成部分。
+  英国商会总干事亚当・马歇尔也表示，新的限制措施将对商界造成毁灭性打击。他说：“许多企业现在的处境比疫情暴发之初要糟糕得多，在需求限制的情况下生存变得更具挑战性。”
+ </p>
+ <p>
+  在新的疫情封锁措施宣布后的第一个交易日，伦敦股市100种股票平均价格指数（富时100指数）11月2日报收于5654.97点，比前一交易日上涨77.70点，涨幅为1.39%。
+ </p>
+ <p>
+  对此，AJ贝尔公司投资总监罗斯・莫德认为，尽管封锁会影响投资者情绪，但大约四分之三的富时100指数成分股从海外获得收入，因此英国本地的封锁措施对其影响不大。此外，市场已于上周提前消化了封锁预期。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -107,11 +82,7 @@
   </div>
  </center>
  <p>
-  欧洲的两名投资银行资深高管对路透社说，他们正在评估对中国科技公司的
-  <span href="https://www.secretchina.com/news/gb/tag/敞口" target="_blank">
-   敞口
-  </span>
-  。
+  从个股来看，提高了盈利预期的在线零售商奥凯多公司当天领涨，涨幅达8.04%。莫德认为，这可以清楚看出投资者正在市场中筛选，寻找会在封锁期间受益的公司。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -126,7 +97,7 @@
   </div>
  </center>
  <p>
-  他们特别关注的是涉及硬件和半导体并且在美国有业务的客户，并试图评估这些公司被列入制裁名单的风险。
+  但英国互动投资公司市场主管理查德・亨特表示，投资者未来还面临一系列担忧，毕竟第二次大封锁的影响将遍及各个行业。航空和旅游业将继续瘫痪，零售业正在适应将销售重点转移到线上，银行要考虑增加不良贷款准备金。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -141,7 +112,7 @@
   </div>
  </center>
  <p>
-  向中国企业发放的新贷款也有所放缓。这些贷款已经因担心新冠疫情对企业的影响而面临压力。
+  市场分析认为，英国央行货币政策委员会不太可能降低目前已经很低的利率，而将依靠量化宽松应对即将再度来临的经济萎缩。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -156,7 +127,22 @@
   </div>
  </center>
  <p>
-  与中国公司业务最多的外资银行是汇丰控股，其次是渣打银行。这两家银行拒绝就此发表评论。
+  万神殿宏观经济(Pantheon Macroeconomics)英国首席经济学家塞缪尔・图姆斯表示，英国央行目前7450亿英镑的购债目标要到今年年底才能实现，考虑到新的封锁政策以及英国与欧盟就未来关系谈判的不确定性，等到12月再扩大量化宽松可能已经来不及。预计央行将宣布在2021年上半年再购买1000亿英镑的金边债券。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  牛津经济研究院经济学家马丁・贝克表示，进一步注入量化宽松政策可能“提升金融市场以及企业和消费者的情绪”，这也将有助于防止不必要的风险。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -188,7 +174,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -220,13 +206,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/945933.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/945933.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/945933.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/12/945933.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/951330.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/951330.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/951330.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/03/951330.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/945933.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p5/951330.md' width='0px' height='0px'/>
