--- a/pages/soh6/438943.md
+++ b/pages/soh6/438943.md
@@ -35,7 +35,7 @@
   ，所用时间为美东时间，请经常手动刷新页面以便看到我们不断更新的内容：
  </p>
  <h3>
-  11：00am：第一夫人在佛州投选
+  11：00am：第一夫人在佛州投票
  </h3>
  <p>
   第一夫人梅拉尼娅上午10点过来到佛州棕榈滩的Sans Mask投票站投票后，向记者挥手微笑。当被问及为什么她不与总统一起在上星期投票时，梅拉尼娅表示，她想在选举日亲自投票。
