--- a/pages/soh6/438943.md
+++ b/pages/soh6/438943.md
@@ -35,6 +35,15 @@
   ，所用时间为美东时间，请经常手动刷新页面以便看到我们不断更新的内容：
  </p>
  <h3>
+  1: 00pm：川普截至目前在德克萨斯州、佛罗里达州领先
+ </h3>
+ <p>
+  来自德克萨斯州消息，川普在该州的选票已经领先114万张选票。在竞争激烈的佛罗里达州，川普领先拜登92,692张选票。
+ </p>
+ <p>
+  亚利桑那州选举日当天统计，截至目前，共和党获得了49%的选票；民主党获得了18%；而有32%的选票投给了独立候选人。
+ </p>
+ <h3>
   12：00pm：上午已有近1亿选民投票，创历史新高
  </h3>
  <p>
