--- a/pages/soh6/438943.md
+++ b/pages/soh6/438943.md
@@ -35,6 +35,30 @@
   ，所用时间为美东时间，请经常手动刷新页面以便看到我们不断更新的内容：
  </p>
  <h3>
+  3：00pm：
+ </h3>
+ <h3>
+  副总统彭斯战场州接受采访忙
+ </h3>
+ <p>
+  副总统彭斯（Mike Pence）选举日在战场州忙着接受采访，电视和广播媒体对他的采访多达21次。目前，彭斯已经至少接受了7个战场州媒体的采访，其中包括佛罗里达州、威斯康星州、俄亥俄州、北卡罗来纳州、密歇根州和内华达州。
+ </p>
+ <p>
+  白宫官员表示，彭斯副总统争取让选民在选举结束前的最后一分钟走出来投票。
+ </p>
+ <h3>
+  爱荷华州近半选民提前投票
+ </h3>
+ <p>
+  爱荷华州选举数据显示，至少996,970选民通过邮寄或亲自前往投票点完成提前投票。这占了爱荷华州登记选民总数的48%。
+ </p>
+ <p>
+  周一，爱荷华州有41,000名选民投票。在提前投票的选民中，登记为民主党的选民站45%，登记为共和党的站33%，剩下21%的选民没有注册党派。
+ </p>
+ <p>
+  爱荷华州选举站将在晚上10点关闭。缺席邮寄投票需要在11月9号之前收到，并且邮戳需要在11月2号之前才能被计入选票。
+ </p>
+ <h3>
   2：00pm：川普总统到访竞选团队总部（直播）
  </h3>
  <div class="soh-embed">
