--- a/pages/soh6/438943.md
+++ b/pages/soh6/438943.md
@@ -35,10 +35,34 @@
   ，所用时间为美东时间，请经常手动刷新页面以便看到我们不断更新的内容：
  </p>
  <h3>
-  3：00pm：
+  4: 00pm：英国研究院发布最后一次美国大选预测
  </h3>
+ <p>
+  英国「民主研究院」（Democracy Institute）今天发布美国大选最后一次预测：“ 川普总统在关键摇摆州，包括佛州、爱荷华州、密歇根州、明尼苏达州、宾州和威斯康星州，以49％领先于拜登的45％。 这意味着川普将赢得326选举人票，拜登为212票。
+ </p>
+ <p>
+  目前佛罗里达州川普选票已领先拜登14万张。
+ </p>
  <h3>
-  副总统彭斯战场州接受采访忙
+  美国大选日各地投票站关闭时间（所有时间都是该州当地时间）
+ </h3>
+ <p>
+  下午6点：印第安那、肯塔基
+ </p>
+ <p>
+  晚上7点：阿拉巴马、亚利桑那、科罗拉多、佛罗里达、乔治亚、夏威夷、伊利诺伊、堪萨斯、密西西比、密苏里、内华达、俄克拉荷马、南卡罗来纳、南达科他、德克萨斯、佛蒙特、维吉尼亚、怀俄明
+ </p>
+ <p>
+  晚上7点30分：阿肯色、北卡罗来纳、俄亥俄、西弗吉尼亚
+ </p>
+ <p>
+  晚上8点：阿拉斯加、加利福尼亚、康乃狄克、特拉华、爱达荷、路易斯安那、缅因、马里兰、马萨诸塞、密西根、明尼苏达、蒙大拿、内布拉斯加、新罕布什尔、新泽西、新墨西哥、俄勒冈、宾夕法尼亚、罗德岛、田纳西、犹他、华盛顿、华盛顿特区、威斯康辛州
+ </p>
+ <p>
+  晚上9点：爱荷华、纽约州、北达科塔
+ </p>
+ <h3>
+  3：00pm：副总统彭斯战场州接受采访忙
  </h3>
  <p>
   副总统彭斯（Mike Pence）选举日在战场州忙着接受采访，电视和广播媒体对他的采访多达21次。目前，彭斯已经至少接受了7个战场州媒体的采访，其中包括佛罗里达州、威斯康星州、俄亥俄州、北卡罗来纳州、密歇根州和内华达州。
