--- a/pages/prog202/a102978411.md
+++ b/pages/prog202/a102978411.md
@@ -1,4 +1,4 @@
-### 【环球直击】10月9日完整版（2）
+### 【全球新闻】11月3日完整版
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,34 +7,42 @@
 
 <div><div class="post_content" itemprop="articleBody">
  <p>
-  【新唐人北京时间2020年10月10日讯】【环球直击】10月9日完整版（2）
+  【新唐人北京时间2020年11月04日讯】【全球新闻】11月3日完整版
  </p>
  <p>
   <strong>
    提要
   </strong>
   <br/>
-  文件揭秘韩中美复杂关系 中共对韩“欲擒故纵”
+  <ok href="https://www.ntdtv.com/gb/美大选.htm">
+   美大选
+  </ok>
+  最早投票小镇结果出炉
+  <ok href="https://www.ntdtv.com/gb/川普.htm">
+   川普
+  </ok>
+  暂领先
   <br/>
-  美司法部官员：中国是
-  <ok href="https://www.ntdtv.com/gb/美国国安.htm">
-   美国国安
+  大选前
+  <ok href="https://www.ntdtv.com/gb/白宫新书.htm">
+   白宫新书
   </ok>
-  头号威胁
+  《
+  <ok href="https://www.ntdtv.com/gb/川普论中国.htm">
+   川普论中国
+  </ok>
+  》 再阐明对中共政策
   <br/>
-  <ok href="https://www.ntdtv.com/gb/庆双十.htm">
-   庆双十
+  <ok href="https://www.ntdtv.com/gb/西班牙.htm">
+   西班牙
   </ok>
-  民众期许自由民主 港人摆横幅庆祝
+  日增5.5万确诊 法国希腊等国全封锁
   <br/>
-  <ok href="https://www.ntdtv.com/gb/粮食计划署.htm">
-   粮食计划署
+  披星戴月
+  <ok href="https://www.ntdtv.com/gb/川普.htm">
+   川普
   </ok>
-  意外获
-  <ok href="https://www.ntdtv.com/gb/诺贝尔和平奖.htm">
-   诺贝尔和平奖
-  </ok>
-  或被中共渗透
+  归来 大选日白宫阳光初起
  </p>
  <div class="single_ad">
  </div>
@@ -42,13 +50,13 @@
 </div>
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102959747.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102959747.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102959747.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.ntdtv.com/gb/2020/10/09/a102959747.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102978411.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102978411.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102978411.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.ntdtv.com/gb/2020/11/03/a102978411.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/prog202/a102959747.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/prog202/a102978411.md' width='0px' height='0px'/>
