--- a/pages/soh6/438943.md
+++ b/pages/soh6/438943.md
@@ -35,6 +35,37 @@
   ，所用时间为美东时间，请经常手动刷新页面以便看到我们不断更新的内容：
  </p>
  <h3>
+  7: 00pm：印第安纳、肯塔基投票结束
+ </h3>
+ <p>
+  印第安纳州、肯塔基州的部分地区美东时间18:00点结束投票。
+ </p>
+ <div class="AD_Embed__Wrap-sc-1xslmin-0 igMuqX module desktop">
+  <div>
+  </div>
+ </div>
+ <p>
+  印第安纳州美东时间18:26，川普获得68.6%的投票率，4万8,615张选票；拜登获得30.1%的投票率，2万1,431张选票；自由党参选人Jo Jorgensen获得1.7%的投票率，1,200张选票。
+ </p>
+ <p>
+  印第安纳州因为当天才开始统计缺席选票，所以需要等待数天才知道所有结果，尤其是人口稠密的大城区的选票结果。该州的大选关注焦点是总统选举、第5选区的众议员选举。
+ </p>
+ <p>
+  肯塔基州会在大选夜统计9成选票，缺席选票要等到11月6日才截止，所以需要等待最后10%的选票结果。该州的大选关注焦点是第6选区的众议员选举。
+ </p>
+ <p>
+  川普在2016年拿下印第安纳州和肯塔基州。
+ </p>
+ <h3>
+  川普总统、拜登分别在白宫和家中观看选举结果
+ </h3>
+ <p>
+  川普总统今天晚上将在白宫东翼观看选举结果；拜登将在家中观看选举结果。
+ </p>
+ <p>
+  通讯主任阿利萨·法拉（Alyssa Farah）出席福克斯节目时说：“总统今晚将和高级助手、白宫第一家庭的成员一起在东翼观看选举结果。他很兴奋。我们已经付出了努力，我们没有把任何一票视为理所当然，他一直在外面与选民见面，每天做多达5场的竞选活动，我们已经准备好看到这些结果了。”
+ </p>
+ <h3>
   6：30pm：川普、拜登得票率最新数据出台
  </h3>
  <p>
