同步于: 11月4日9时2分

--- a/pages/soh6/438943.md
+++ b/pages/soh6/438943.md
@@ -35,6 +35,30 @@
   ，所用时间为美东时间，请经常手动刷新页面以便看到我们不断更新的内容：
  </p>
  <h3>
+  8: 00pm：部分州陆续关闭投票点
+ </h3>
+ <p>
+  美东时间20点前，美东部分州将关闭投票站，包括：佛罗里达州、乔治亚州、北卡罗来纳州、俄亥俄州、南卡罗来纳州、佛蒙特州、弗吉尼亚州和西弗吉尼亚州。
+ </p>
+ <h3>
+  川普赢得西弗吉尼亚州
+ </h3>
+ <p>
+  据纽约时报消息，川普赢下了西弗吉尼亚州的5张选举人票。
+ </p>
+ <h3>
+  拜登赢得佛蒙特州
+ </h3>
+ <p>
+  佛蒙特州投票结束，拜登赢得该州的3张选票。
+ </p>
+ <h3>
+  西弗吉尼亚州州长、参议员赢得连任
+ </h3>
+ <p>
+  共和党籍众议员吉姆·贾斯汀（Jim Justice）赢得西弗吉尼亚州州长的连任。共和党籍雪莱·摩尔·卡皮托（Shelley Moore Capito）赢得西弗吉尼亚州联邦参议员连任。
+ </p>
+ <h3>
   7: 30pm：川普赢得印第安纳州和肯塔基州共19张选举人票
  </h3>
  <p>
