同步于: 11月4日10时3分

--- a/pages/soh6/438943.md
+++ b/pages/soh6/438943.md
@@ -35,6 +35,12 @@
   ，所用时间为美东时间，请经常手动刷新页面以便看到我们不断更新的内容：
  </p>
  <h3>
+  9：00pm：川普赢得佛罗里达州、阿肯色州和密苏里州
+ </h3>
+ <p>
+  川普赢得佛罗里达，这是开票以来最多选举人票的州，有29张；川普赢得了阿肯色州，6张选举人票；川普也赢得了密苏里州，共10张选举人票。
+ </p>
+ <h3>
   8：30pm：非裔共和党人当选佛州众议员
  </h3>
  <p>
@@ -86,7 +92,7 @@
   据《纽约时报》消息，川普赢下了西弗吉尼亚州的5张选举人票。
  </p>
  <h3>
-  拜登赢得佛蒙特州
+  拜登赢得弗蒙特州
  </h3>
  <p>
   佛蒙特州投票结束，拜登赢得该州的3张选票。
