--- a/pages/soh6/438943.md
+++ b/pages/soh6/438943.md
@@ -35,6 +35,33 @@
   ，所用时间为美东时间，请经常手动刷新页面以便看到我们不断更新的内容：
  </p>
  <h3>
+  10：00pm：
+ </h3>
+ <h3>
+  川普有望赢得北卡州
+ </h3>
+ <p>
+  根据左派媒体《纽约时报》预测，川普有望赢得北卡罗来纳州。目前，北卡州已有84%的选票得到计算，川普暂时比拜登落后0.6个百分点，差距渐渐缩小。
+ </p>
+ <h3>
+  拜登赢得科罗拉多，9张选举人票
+ </h3>
+ <p>
+  拜登刚拿下科罗拉多州，获得了该州9张选举人票。
+ </p>
+ <h3>
+  川普在乔治亚州暂时领先
+ </h3>
+ <p>
+  目前摇摆州乔治亚州已有46%的选票得到计算，川普暂时比拜登领先14个百分点。
+ </p>
+ <h3>
+  川普在德州的领先比率继续上升
+ </h3>
+ <p>
+  目前德州已经有76%的选票得到计算，川普的得票率已经超过拜登2个百分点，赢面增加。
+ </p>
+ <h3>
   9：30pm：
  </h3>
  <h3>
