--- a/pages/p2/951406.md
+++ b/pages/p2/951406.md
@@ -1,4 +1,4 @@
-### 华尔街爆爱奇艺欺诈丑闻 轰动中美 百度股票应声下跌(图)
+### 传中风入院 湖北省长王晓东“失踪”42天露面(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="" src="https://img3.secretchina.com/pic/2020/7-23/p2738681a753033831-ss.jpg"/>
+  <img alt="湖北省长王晓东9月被传中风住院，从公众视野中消失，他在“失踪”42天后首度亮相。（图片来源：网络）" src="https://img3.secretchina.com/pic/2020/11-4/p2810891a809817487-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   大陆视频媒体爱奇艺公司被指伪造财务数据，受到美国证券交易委员会（SEC）调查。（图片来源：维基百科）
+   湖北省长王晓东9月被传中风住院，从公众视野中消失，他在“失踪”42天后首度亮相。（图片来源：网络）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,70 +21,52 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.51.119:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.51.119:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/) &nbsp;|&nbsp; [希望之声广播](http://167.172.10.89/radio.html) &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html)
-
-#### 💥 [九评共产党](http://141.164.51.119:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.51.119:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.51.119:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.51.119:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  【九評之七】评中国共产党的杀人历史](http://141.164.51.119:10000/videos/news/../res/jiuping/index.html)
-
-#### [ 🔥  中共思想如何影響中國人：為什麼練法輪功被迫害卻成最有應得，為什麼講迫害就是涉及政治](http://141.164.51.119:10000/videos/news/truth01.html)
-
-#### [ 🔥  蓬佩奧：孔子學院是由中共資助的宣傳機器 在全球施展中共影響力的一部分](http://141.164.51.119:10000/videos/news/kongzi.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年8月15日讯】美国
+  【看中国2020年11月4日讯】（看中国记者苗薇综合报导）湖北省长
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/华尔街" target="_blank">
-    华尔街
+   <span href="https://www.secretchina.com/news/gb/tag/王晓东" target="_blank">
+    王晓东
    </span>
   </strong>
-  又爆出一宗
+  9月被传中风住院，从公众视野中消失，包括缺席中共十九届五中全会。11月2日，他在“
   <strong>
-   中国企业
+   失踪
   </strong>
-  财务欺诈的
-  <strong>
-   丑闻
-  </strong>
-  。大陆视频媒体
-  <strong>
-   爱奇艺
-  </strong>
-  公司被指伪造财务数据，受到美国证券交易委员会（SEC）调查。这个消息在美国和中国的财经界引起了轰动。爱奇艺公司的股票在周四(8月14日)盘后交易中大跌，周五开盘后又下跌了13%，百度的股票也应声下跌。
+  ”42天后首度亮相。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  据《美国之音》报导，
-  <span href="https://www.secretchina.com/news/gb/tag/爱奇艺" target="_blank">
-   爱奇艺
+  据
+  <span href="https://www.secretchina.com/news/gb/tag/湖北" target="_blank">
+   湖北
   </span>
-  公司周四公开证实了这个消息。它表示，美国证交会要求该公司提供2018年1月以来的财务和运营记录，以及指控所涉及的收购和投资相关文件。
+  省政府新闻办公室官方微博“湖北发布”11月2日消息，湖北省省委书记应勇，省委副书记、省长王晓东在武汉参加人口普查现场登记。这是王晓东“失踪”42天以来首度亮相，湖北发布还在报导中附上了现场照片。
  </p>
  <p>
-  调查目前还只是刚刚开始，最后结果如何还有待观察。但爱奇艺的问题无疑进一步加重了投资人对中国上市公司的不信任感。
+  据大陆资深媒体人“长衫无脸生”早前引述湖北官场人士表示，王晓东9月21日参加所谓的省抗疫表彰大会后不久突然中风。该知情人士还透露，王晓东突然中风，与最近大半年工作压力太大有关。经过一段时间的治疗，王晓东病情已经大为好转，已经能下床活动，说话表达也很正常，目测没有什么后遗症，不久后应该就能恢复工作。
  </p>
  <p>
-  今年4月，另一家在美国上市的
-  <span href="https://www.secretchina.com/news/gb/tag/中国企业" target="_blank">
-   中国企业
+  在王晓东“失踪”期间，有人猜测他官位不保。武汉最先爆发
+  <span href="https://zh.wikipedia.org/zh-hans/%E4%B8%AD%E5%9B%BD%E7%97%85%E6%AF%92" target="_blank">
+   中共病毒
   </span>
-  瑞幸咖啡，因伪造账目受到美国证券交易委员会的调查。这个事件引发公众批评美国市场监督机构对中国公司监管不力，瑞幸咖啡于今年6月退出了纳斯达克市场。
+  疫情，武汉与湖北官员的不作为和乱作为使得湖北没能及时对疫情作出反应，错过防疫的最佳时机，导致全世界蔓延，而湖北省长王晓东的抗疫表现也备受争议。
  </p>
  <p>
-  今年5月，美国国会参议院通过议案，加强对华尔街的中国企业的审查，并警告中国企业如果不遵守美国市场监管规则，就会面临强行退市的后果。
+  1月23日，王晓东接受央视采访时表示，湖北的“物资储备充足”。而与此同时，湖北省8家医院相继发出通告，向社会各界征集捐赠防护物资。
  </p>
  <p>
-  爱奇艺的财务作假问题是由一家叫做Wolfpack Research的公司揭露的。该公司在4月公布了一份报告中，指控爱奇艺在2019年的收入被夸大了80-130亿元人民币。
+  1月26日，在疫情记者会上，王晓东接连口误，先说湖北省生产医用口罩有“一定优势”，仙桃市口罩年生产量是“108亿只”，当有人递给他小纸条后，他改口说，不是108亿只、是18亿只；放下纸条，再有人递来条子，他又改口说是生产108万只，不是亿只是万只。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -99,7 +81,7 @@
   </div>
  </center>
  <p>
-  这份做空报告说，爱奇艺早在2018年首次公开募股之前就存在欺诈行为，并一直持续至今。报告说，爱奇艺是通过虚报用户数量约42%-60%来夸大收入的。报告还说，爱奇艺在为内容、其他资产和收购支付的成本都被夸大，通过烧假钱，向审计师和投资者隐藏欺诈行为。
+  60岁的王晓东是江西信丰人，曾在江西、贵州任职，做过贵阳市委书记、贵州省常务副省长。2011调任湖北省委常委，2016年9月起任湖北副省长、代理省长；2017年1月起任湖北省长至今。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -114,7 +96,7 @@
   </div>
  </center>
  <p>
-  爱奇艺是2018年从中国搜索引擎百度公司分离出来以后在美国上市的。上市融资总额为22亿美元。
+  疫情爆发后，湖北省委书记及武汉市委书记相继换人，2月13日，应勇接替蒋超良任湖北省委书记，王忠林接替马国强任武汉市委书记，湖北省长王晓东一度传或由中共中央政法委秘书长陈一新接替。蒋超良被免职后，也一度“消失”近8个月，蒋超良于近日现身中共十九届五中全会。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -129,11 +111,7 @@
   </div>
  </center>
  <p>
-  据信，百度持有爱奇艺的69%的股权。爱奇艺的
-  <span href="https://www.secretchina.com/news/gb/tag/丑闻" target="_blank">
-   丑闻
-  </span>
-  曝露之后，百度的股票周四也应声下跌了7%，周五中午左右（纽约股市时间），百度股票的降幅大约为7%。
+  对此，有分析称，随着蒋超良出席五中，而五中又没有通报人事安排，则说明蒋超良及武汉市委书记马国强都会大概率平安落地。1957年出生的蒋超良现今已是63岁，如果没有此次的疫情波折或许还有更进一步的可能，但经此一事，最大可能是退居二线。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -165,7 +143,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -197,13 +175,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/943021.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/943021.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/943021.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/08/15/943021.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/951406.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/951406.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/951406.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/04/951406.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p3/943021.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p2/951406.md' width='0px' height='0px'/>
