--- a/pages/nsc412/n12523578.md
+++ b/pages/nsc412/n12523578.md
@@ -7,7 +7,7 @@
 
 <div><img alt="【国会大选更新】反共参议员汤姆·科顿赢连任" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/05/fbac783c44ad62d413660b3355d23f18.jpg"/>
 <div class="caption">
- 2020年11月3日，在佛罗里达州迈阿密市的迈阿密-戴德县选举部门，选举工作人员在扫描选票。 (CHANDAN KHANNA/AFP via Getty Images)
+ 2020年11月3日，阿肯色州共和党参议员汤姆·布莱恩特·科顿（Tom Bryant Cotton）赢得连任。（Zach Gibson - Pool/Getty Images)
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
