--- a/pages/nf4514/n12518740.md
+++ b/pages/nf4514/n12518740.md
@@ -72,7 +72,31 @@
  以下是美国大选日各州投票情况的实时更新（以下时间为美东时间）：
 </h4>
 <h3>
- 4:10美国
+ 6:47 欧洲领导人对美国大选的反应
+</h3>
+<p>
+ 很多欧洲领导人认为，这次选举让欧洲更加意识到，要把“命运掌握在自己手中”。
+</p>
+<p>
+ 周三上午，德国国防部长康坎鲍尔（AnnegretKramp-Karrenbauer ）形容美国的局势是“爆炸性”的，担忧美国可能陷入宪政危机。
+</p>
+<p>
+ 比利时前总理盖伊·霍夫施塔特（Guy Verhofstadt）说，要把“命运掌握在自己手中”，法国的欧洲部长表示，不能依靠美国大选的结果来决定欧洲的命运。
+</p>
+<p>
+ 川普总统在四年任期中，在外交、贸易、安全、技术，气候等方面对美欧关系进行了巨大改变。
+</p>
+<h3>
+ 5:25 大选结果未定 美国股市波动
+</h3>
+<p>
+ 由于11月3日的美国大选没能迅速得出结论，导致周三的美国股市大幅摇摆。
+</p>
+<p>
+ 在川普宣称获胜、并表示将上最高法庭阻止继续计票之后，道琼斯工业平均指数下跌了400多点，跌幅为1.5％，后来有所回升，但在盘前交易中仍然不稳定。 截至美东时间上午3:30，道指期货下跌了0.1％，而标准普尔500期货上涨0.6％。 纳斯达克综合指数（Nasdaq Composite）在一夜之间上涨了2.5％。
+</p>
+<h3>
+ 4:10 美国
  <ok href="https://www.epochtimes.com/gb/tag/%E6%80%BB%E7%BB%9F%E5%A4%A7%E9%80%89.html">
   总统大选
  </ok>
