--- a/pages/nf4514/n12523578.md
+++ b/pages/nf4514/n12523578.md
@@ -52,16 +52,43 @@
  </strong>
 </p>
 <p>
+ 8：42
+</p>
+<p>
+ 在弗吉尼亚第四国会选区，民主党候选人唐纳德·麦卡钦（Donald McEachin）成功连任众议院议员。
+</p>
+<p>
+ 7：45
+</p>
+<p>
+ 在11月3日的选举中，五位共和党的女候选人在众议院击败了现任的民主党人。
+</p>
+<p>
+ 在南卡罗莱纳第一国会选区，现年42岁的女商人南希·梅斯（Nancy Mace）击败了38岁的民主党众议员乔·坎宁安（Joe Cunningham ）；
+</p>
+<p>
+ 在俄克拉荷马州第五国会选区，现年46岁的斯蒂芬妮·比斯（Stephanie Bice）击败了民主党众议员肯德拉·霍恩（Kendra Horn）；
+</p>
+<p>
+ 在佛罗里达州第27国会选区，前电视记者玛丽亚·埃尔维拉·萨拉萨（Maria Elvira Salazar）击败了现年79岁的民主党众议员唐娜·沙拉拉（Donna Shalala）；
+</p>
+<p>
+ 在新墨西哥州第二国会选区，现年56岁的女商人伊维特·赫雷尔（Yvette Herrell）击败了民主党众议员斯莫尔（Xochitl Torres Small）；
+</p>
+<p>
+ 在明尼苏达的第七国会选区，该州参议院前议长米歇尔·菲施巴赫（Michelle Fischbach）击败了的76岁的民主党众议员科林·彼得森（Collin Peterson），取得胜利。
+</p>
+<p>
  6：22
 </p>
 <p>
  北卡罗来纳州的选情已成为这次美国参议院选举的最大看点之一， 共和党参议员汤姆·提利斯（Thom Tillis）宣布获胜，取得连任。
 </p>
 <p>
- 民主党民主党人卡尔·坎宁安（Cal Cunningham）在几个月的竞选活动本来一直领先，但是性丑闻导致他名声狼藉, 使得本来充满悬念的选情出现了戏剧性变化。
+ 民主党人卡尔·坎宁安（Cal Cunningham）在几个月的竞选活动本来一直领先，但是性丑闻导致他名声狼藉, 使得本来充满悬念的选情出现了戏剧性变化。
 </p>
 <p>
- 此前媒体分析，这一席位花落谁家或将决定民主当和共和党谁能控制参议院。
+ 此前媒体分析，这一席位花落谁家或将决定民主党和共和党谁能控制参议院。
 </p>
 <p>
  5：42
